# sphincter

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
scripts/: install.sh  uninstall.sh
src/: main.rs
