[package]
name = "sphincter"
version = "0.1.7"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
axum = { version = "0.8.7", features = ["ws"] }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
clap = { version = "4.5", features = ["derive", "env"] }